# clearbot

./: .gitignore  DEMO.md  DEMO.vi.md  README.md  TUTORIAL.md  app.py  commands.py  helper-funs.py  keyring.py  memory.py  models.py  planning.py  prompting.py  pyproject.toml  requirements.txt  skills.py  tools.py  toolsets.py  traces.py
commands/: critique.md  explain.md  summarize.md
skills/chart-recommender/: SKILL.md
skills/commit-messages/: SKILL.md
skills/csv-profiler/: SKILL.md
skills/data-cleaning-checklist/: SKILL.md
skills/regex-builder/: SKILL.md
skills/schema-design-review/: SKILL.md
skills/sql-query-builder/: SKILL.md
www/: main.js
